<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainMenuActivity"
    android:background="@drawable/background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/button_gampang_pisan"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/menu_1_button"
                    android:textColor="@color/darkgreenflat"
                    android:text="@string/menu_satu"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="center"
                    android:paddingBottom="10dp"/>

                <Button
                    android:id="@+id/button_gampang"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/menu_2_button"
                    android:textColor="@color/sunflower"
                    android:text="@string/menu_dua"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    />
                <Button
                    android:id="@+id/button_rada_sedeng"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/menu_3_button"
                    android:textColor="@color/blueflat"
                    android:text="@string/menu_tiga"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    />
                <Button
                    android:id="@+id/button_sedeng"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/menu_4_button"
                    android:textColor="@color/orangeflat"
                    android:text="@string/menu_empat"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    />
                <Button
                    android:id="@+id/button_rada_hese"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/menu_5_button"
                    android:textColor="@color/purpleflat"
                    android:text="@string/menu_lima"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    />
                <Button
                    android:id="@+id/button_hese"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/menu_6_button"
                    android:textColor="@color/red"
                    android:text="@string/menu_enam"
                    android:textStyle="bold"
                    android:textSize="35dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    />
            </LinearLayout>
    </ScrollView>

</RelativeLayout>